syntax = "proto3";

option csharp_namespace = "regGRPC";

package greet;

// The greeting service definition.
service Greeter {
  // Sends a greeting
  rpc SayHello (HelloRequest) returns (HelloReply);
  rpc SendRegistrationProcess (RegistrationProcessRequest) returns (DefaultResponse);
  rpc SendValidateEnvironmentTypeRequest (ValidateEnvironmentTypeRequest) returns (DefaultResponse);
  rpc SendValidateLevelTypeRequest (ValidateLevelTypeRequest) returns (DefaultResponse);
}

// The request message containing the user's name.
message HelloRequest {
  string name = 1;
}

// The response message containing the greetings.
message HelloReply {
  string message = 1;
}

message RegistrationProcessRequest {
	string title = 1;
	string reportDescription = 2;
	string reportSource = 3;
	int32 levelTypeID = 4;
	int32 events = 5;
	int32 environmentTypeID = 6;
	string OwnerID = 7;
}

message DefaultResponse { 
	bool status = 1;
}

message ValidateEnvironmentTypeRequest {
	int32 environmentTypeID = 1;
}

message ValidateLevelTypeRequest {
	int32 levelTypeID = 1;
}
